* sfsegyheader creates delrt from o1
* user/poulsonj: new contributor (Jack Poulson)
* vpconvert  checks the existence of different pens and prefers gdpen
  to pngpen
* sffft1, sffft3, sfspectra, sfspectra2: optional support for FFTW
* oglpen stops movie on pressing 'n' or 'm', menu on left button on
  Macs
* creating rsfpwd library in user/fomels to avoid code duplication
* sfawefd2d and 3d: constant-density flag. Improved speed, memory usage

===Bug fixes===

In the reproducible documents collection:

In documentation:

In APIs:
* Fixed settype bug in Python API
* Fixed inpout selfdoc extraction for C++ programs

In the Python package:

* Fixed "scons test" in suproj

In programs:

* Fixed size limitation in sfclip2
* Added x0 and y0 in sfstolt 
* Fixed installing the plplot driver with .driver_info extension

In the build system:
* Fixed failed dependency on gendoc.h when installing pens

===Changes in defaults and interfaces===

* In sflwefd: *q1 and *q2 parameters become *qx and *qz, respectively

==Release 1.3 (2012-04-22)==

===Additions and enhancements===

To the reproducible documents collection:

* jsg/reversible: A reversible transform for seismic data processing
  (Burnett and Ferguson) 
* sep/pyramid: The pyramid transform and its application to
  signal/noise separation (Sun and Ronen)
* jsg/ffd: Fourier finite-difference wave propagation (Song and Fomel)
* jsg/apefint: Seismic data interpolation beyond aliasing using
  regularized nonstationary autoregression (Liu and Fomel)
* jsg/timefreq: Time-frequency analysis of seismic data using local
  attributes (Liu, Fomel, and Chen)
* data/alaska: Open Data/Open Source: Seismic Unix scripts to process
  a 2D land line (Schleicher)
* jsg/ltft: Seismic data analysis using local time-frequency
  decomposition (Liu and Fomel)

To SCons:

* Upgraded to scons-2.1.0

To documentation:

* Python API documented with Epydoc
* Limited the number of USED IN examples displayed by selfdoc and man