@@ -25,6 +25,15 @@ Result('def','def par man for','TwoRows')
 
 Result('geo','def fnt','OverUnderIso')
 
+Flow('x',None,'math n1=50 output=x1')
+Flow('y','x','math output=x1^2')
+Flow('z','x','byte allpos=y')
 
+Result('xyz','x y z',
+       '''
+       cmplx ${SOURCES[1]} |
+       graph depth=${SOURCES[2]} symbol=o symbolsz=8 color=h
+       title="Colored Symbols"
+       ''')
 
 End()
